integrated table_x and table_y

--- a/AirQ_Part1_080.ipynb
+++ b/AirQ_Part1_080.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "07def75d-1bd4-4c44-a341-9e6e71742fea",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "93ae5428-70cc-4237-b3ff-c228686b3271",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "004841f2-fb79-4e7f-88f3-9eed76c28bef",
    "metadata": {},
    "outputs": [
@@ -111,12 +111,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV dir: /Users/philippmoessner/Desktop/Business Intelligence/DWH1_080/csv\n",
-      "Data dir: /Users/philippmoessner/Desktop/Business Intelligence/DWH1_080/data\n",
-      "DDL dir: /Users/philippmoessner/Desktop/Business Intelligence/DWH1_080/ddl\n",
-      "ETL dir: /Users/philippmoessner/Desktop/Business Intelligence/DWH1_080/etl\n",
-      "Postchecks dir: /Users/philippmoessner/Desktop/Business Intelligence/DWH1_080/post\n",
-      "SQLdump dir: /Users/philippmoessner/Desktop/Business Intelligence/DWH1_080/sqldump\n"
+      "CSV dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/csv\n",
+      "Data dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/data\n",
+      "DDL dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/ddl\n",
+      "ETL dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/etl\n",
+      "Postchecks dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/post\n",
+      "SQLdump dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/sqldump\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "8816fcb6-7038-486e-ae99-2efc346eeccb",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a704b837-f6a0-4c73-b2a5-e3f069aa6df9",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "6d04d190-0479-42fb-babe-9d782e26235d",
    "metadata": {
     "scrolled": true
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "855c8fcd-8591-40fb-b435-58d118e7e694",
    "metadata": {},
    "outputs": [],
@@ -403,9 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "a109ccca-903b-4980-87ff-5092004f0d74",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -426,7 +428,7 @@
       "Loaded 627 rows → stg_080.tb_sensordevice\n",
       "Loaded 22,720 rows → stg_080.tb_serviceevent\n",
       "Loaded 985,573 rows → stg_080.tb_readingevent\n",
-      "⏱️ Total load time: 94.76 seconds · 1,036,105 rows\n"
+      "⏱️ Total load time: 93.51 seconds · 1,036,105 rows\n"
      ]
     }
    ],
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "396d963e-3517-425a-a031-c186f30c659b",
    "metadata": {},
    "outputs": [
@@ -463,16 +465,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 1 rows → stg_080.tb_x\n",
-      "Loaded 1 rows → stg_080.tb_y\n",
-      "⏱️ Total load time: 0.08 seconds · 2 rows\n"
+      "Loaded 6 rows → stg_080.tb_certificates\n",
+      "Loaded 27 rows → stg_080.tb_roletocertificate\n",
+      "⏱️ Total load time: 0.02 seconds · 33 rows\n"
      ]
     }
    ],
    "source": [
     "# Next, we load our \"extra\" tables X and Y\n",
     "\n",
-    "LOAD_ORDER_DATA = [\"tb_x\", \"tb_y\"]  # student-created tables in /data subfolder\n",
+    "LOAD_ORDER_DATA = [\"tb_certificates\", \"tb_roletocertificate\"]  # student-created tables in /data subfolder\n",
     "\n",
     "load_folder_to_stg(\"data\", engine, SCHEMA_STG, load_order=LOAD_ORDER_DATA, if_exists=\"append\")"
    ]
