--- a/AirQ_Part1_080.ipynb
+++ b/AirQ_Part1_080.ipynb
@@ -492,10 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "56719c08-77d7-45c0-8a04-5b1fe82e988a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== DWH-ONLY RESET: dwh_080 ==\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"== DWH-ONLY RESET: dwh_{XXX} ==\")\n",
     "try:\n",
@@ -520,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "518eb416",
    "metadata": {},
    "outputs": [],
