further validation checks

--- a/AirQ_Part1_080.ipynb
+++ b/AirQ_Part1_080.ipynb
@@ -164,13 +164,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Password for grp_080@localhost:5432/airq (leave empty if not needed):  ········\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -342,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "855c8fcd-8591-40fb-b435-58d118e7e694",
    "metadata": {},
    "outputs": [],
@@ -492,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "56719c08-77d7-45c0-8a04-5b1fe82e988a",
    "metadata": {},
    "outputs": [
@@ -528,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "518eb416",
    "metadata": {},
    "outputs": [],
@@ -557,18 +550,66 @@
    "id": "5c6b6fe2-dca2-4fd4-8612-97ed3fd90e89",
    "metadata": {},
    "source": [
-    "7.1. Dimension **dim_servicetype** contains the same number of rows as table **tb_servicetype** -> OK"
+    "7.1. Fact table **ft_readingevent** contains the same number of rows as table **tb_readingevents** -> OK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "fd8d9620-c799-4f4b-b41b-83c92109d7aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dwh_count</th>\n",
+       "      <th>stg_count</th>\n",
+       "      <th>status_check</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>985573</td>\n",
+       "      <td>985573</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2025-10-30 19:02:20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   dwh_count  stg_count status_check            run_time\n",
+       "0     985573     985573           OK 2025-10-30 19:02:20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Check 1 — example\n",
-    "df = run_sqlscript(\"post/a1_check01_example.sql\", engine=engine, progress=VERBOSE_SQL)\n",
+    "# Check 1\n",
+    "df = run_sqlscript(\"post/a1_check01_readingevents.sql\", engine=engine, progress=VERBOSE_SQL)\n",
     "display(df)"
    ]
   },
@@ -577,18 +618,200 @@
    "id": "22dbf506-0ef1-4542-a103-f1ddddd8e2a1",
    "metadata": {},
    "source": [
-    "7.2. There are no mismatching names for **typename** between dimension **dim_servicetype** and staging table **tb_servicetype** -> OK"
+    "7.2 Fact table **ft_serviceevent** contains the same number of rows as table **tb_serviceevent** -> OK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "a13fefb4-af50-4630-916b-3743ba1f0f88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dwh_count</th>\n",
+       "      <th>stg_count</th>\n",
+       "      <th>status_check</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22720</td>\n",
+       "      <td>22720</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2025-10-30 19:02:43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   dwh_count  stg_count status_check            run_time\n",
+       "0      22720      22720           OK 2025-10-30 19:02:43"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Check 2 — example\n",
-    "df = run_sqlscript(\"post/a1_check02_example.sql\", engine=engine, progress=VERBOSE_SQL)\n",
+    "# Check 2\n",
+    "df = run_sqlscript(\"post/a1_check02_serviceevents.sql\", engine=engine, progress=VERBOSE_SQL)\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf8dc2e9",
+   "metadata": {},
+   "source": [
+    "7.3 All employees of dimension **dim_employee** have correctly calculated total months of education -> OK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3ed612bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>correct_edu_durations</th>\n",
+       "      <th>total_employees</th>\n",
+       "      <th>status_check</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>484</td>\n",
+       "      <td>484</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2025-10-30 19:01:24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   correct_edu_durations  total_employees status_check            run_time\n",
+       "0                    484              484           OK 2025-10-30 19:01:24"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Check 3\n",
+    "df = run_sqlscript(\"post/a1_check03_educationduration.sql\", engine=engine, progress=VERBOSE_SQL)\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfea5729",
+   "metadata": {},
+   "source": [
+    "7.4 The newly extracted measure **alertlevel** of the fact table **ft_readingevent** has a correct range -> OK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "064c0b82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alert_min</th>\n",
+       "      <th>alert_max</th>\n",
+       "      <th>status_check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>OK</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   alert_min  alert_max status_check\n",
+       "0          0          4           OK"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Check 4\n",
+    "df = run_sqlscript(\"post/a1_check04_alertleveltype.sql\", engine=engine, progress=VERBOSE_SQL)\n",
     "display(df)"
    ]
   },
@@ -964,9 +1187,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dwh)",
+   "display_name": "dwh",
    "language": "python",
-   "name": "dwh"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
