--- a/AirQ_Part1_080.ipynb
+++ b/AirQ_Part1_080.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "07def75d-1bd4-4c44-a341-9e6e71742fea",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "93ae5428-70cc-4237-b3ff-c228686b3271",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "004841f2-fb79-4e7f-88f3-9eed76c28bef",
    "metadata": {},
    "outputs": [
@@ -111,12 +111,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV dir: /Users/vasilysavin/Documents/buin/tuwien_bi/csv\n",
-      "Data dir: /Users/vasilysavin/Documents/buin/tuwien_bi/data\n",
-      "DDL dir: /Users/vasilysavin/Documents/buin/tuwien_bi/ddl\n",
-      "ETL dir: /Users/vasilysavin/Documents/buin/tuwien_bi/etl\n",
-      "Postchecks dir: /Users/vasilysavin/Documents/buin/tuwien_bi/post\n",
-      "SQLdump dir: /Users/vasilysavin/Documents/buin/tuwien_bi/sqldump\n"
+      "CSV dir: /Users/philippmoessner/Desktop/tuwien_bi/csv\n",
+      "Data dir: /Users/philippmoessner/Desktop/tuwien_bi/data\n",
+      "DDL dir: /Users/philippmoessner/Desktop/tuwien_bi/ddl\n",
+      "ETL dir: /Users/philippmoessner/Desktop/tuwien_bi/etl\n",
+      "Postchecks dir: /Users/philippmoessner/Desktop/tuwien_bi/post\n",
+      "SQLdump dir: /Users/philippmoessner/Desktop/tuwien_bi/sqldump\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "8816fcb6-7038-486e-ae99-2efc346eeccb",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "a704b837-f6a0-4c73-b2a5-e3f069aa6df9",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "id": "6d04d190-0479-42fb-babe-9d782e26235d",
    "metadata": {
     "scrolled": true
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "id": "855c8fcd-8591-40fb-b435-58d118e7e694",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "id": "a109ccca-903b-4980-87ff-5092004f0d74",
    "metadata": {
     "scrolled": true
@@ -421,7 +421,7 @@
       "Loaded 627 rows → stg_080.tb_sensordevice\n",
       "Loaded 22,720 rows → stg_080.tb_serviceevent\n",
       "Loaded 985,573 rows → stg_080.tb_readingevent\n",
-      "⏱️ Total load time: 197.79 seconds · 1,036,105 rows\n"
+      "⏱️ Total load time: 92.54 seconds · 1,036,105 rows\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "id": "c59b4cbc",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
      "text": [
       "Loaded 5 rows → stg_080.tb_power_plan\n",
       "Loaded 118 rows → stg_080.tb_device_power_plan\n",
-      "⏱️ Total load time: 0.04 seconds · 123 rows\n"
+      "⏱️ Total load time: 0.08 seconds · 123 rows\n"
      ]
     }
    ],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
    "id": "b7383b2e",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "id": "56719c08-77d7-45c0-8a04-5b1fe82e988a",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 35,
    "id": "518eb416",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 36,
    "id": "fd8d9620-c799-4f4b-b41b-83c92109d7aa",
    "metadata": {},
    "outputs": [
@@ -604,8 +604,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>negative_readings</th>\n",
-       "      <th>implausibly_large</th>\n",
+       "      <th>dwh_count</th>\n",
+       "      <th>stg_count</th>\n",
        "      <th>status_check</th>\n",
        "      <th>run_time</th>\n",
        "    </tr>\n",
@@ -613,18 +613,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>985573</td>\n",
+       "      <td>985573</td>\n",
        "      <td>OK</td>\n",
-       "      <td>2025-11-03 00:45:03</td>\n",
+       "      <td>2025-11-03 08:12:21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   negative_readings  implausibly_large status_check            run_time\n",
-       "0                  0                  0           OK 2025-11-03 00:45:03"
+       "   dwh_count  stg_count status_check            run_time\n",
+       "0     985573     985573           OK 2025-11-03 08:12:21"
       ]
      },
      "metadata": {},
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 37,
    "id": "a13fefb4-af50-4630-916b-3743ba1f0f88",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "      <td>22720</td>\n",
        "      <td>22720</td>\n",
        "      <td>OK</td>\n",
-       "      <td>2025-11-03 00:45:03</td>\n",
+       "      <td>2025-11-03 08:12:22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -692,7 +692,7 @@
       ],
       "text/plain": [
        "   dwh_count  stg_count status_check            run_time\n",
-       "0      22720      22720           OK 2025-11-03 00:45:03"
+       "0      22720      22720           OK 2025-11-03 08:12:22"
       ]
      },
      "metadata": {},
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "id": "3ed612bd",
    "metadata": {},
    "outputs": [
@@ -749,10 +749,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>484</td>\n",
-       "      <td>fail</td>\n",
-       "      <td>2025-11-03 00:45:03</td>\n",
+       "      <td>484</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2025-11-03 08:12:23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -760,7 +760,7 @@
       ],
       "text/plain": [
        "   correct_edu_durations  total_employees status_check            run_time\n",
-       "0                      0              484         fail 2025-11-03 00:45:03"
+       "0                    484              484           OK 2025-11-03 08:12:23"
       ]
      },
      "metadata": {},
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "064c0b82",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "932a2d5c",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,7 @@
     }
    ],
    "source": [
-    "df = display(run_sqlscript(\"post/a1_check06_reading_value_anomalies.sql\", engine=engine, progress=VERBOSE_SQL))\n",
+    "df = display(run_sqlscript(\"post/a1_check05_reading_value_anomalies.sql\", engine=engine, progress=VERBOSE_SQL))\n",
     "display(df)"
    ]
   },
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "id": "060bec06-8be2-423c-8e88-7699563fc020",
    "metadata": {},
    "outputs": [
@@ -936,8 +936,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running: /usr/local/opt/postgresql@15/bin/pg_dump -h localhost -p 5432 -U <user> -d airq -n dwh_080 --no-owner --no-privileges -f /Users/vasilysavin/Documents/buin/tuwien_bi/sqldump/sqldump_airq_dwh_080.sql\n",
-      "✓ Dump created at /Users/vasilysavin/Documents/buin/tuwien_bi/sqldump/sqldump_airq_dwh_080.sql\n"
+      "Running: /Library/PostgreSQL/17/bin/pg_dump -h localhost -p 5432 -U <user> -d airq -n dwh_080 --no-owner --no-privileges -f /Users/philippmoessner/Desktop/tuwien_bi/sqldump/sqldump_airq_dwh_080.sql\n",
+      "✓ Dump created at /Users/philippmoessner/Desktop/tuwien_bi/sqldump/sqldump_airq_dwh_080.sql\n"
      ]
     }
    ],
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
    "id": "04fab9ce-5dba-40ae-b3c3-3fb91d51f4ef",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1026,7 @@
     "        \"dim_employee\": [\"tb_employee\", \"tb_role\", \"tb_roletocertificate\", \"tb_certificates\"],\n",
     "        \"dim_city\": [\"tb_city\", \"tb_country\"],\n",
     "        \"dim_device\": [\"tb_sensordevice\", \"tb_sensortype\", \"tb_city\", \"tb_country\"],\n",
-    "        \"dim_power_plan\": [\"tb_power_plan\", \"tb_device_power_plan\"],\n",
+    "        \"dim_power_plan\": [\"tb_power_plan\", \"tb_device_power_plan\"]\n",
     "    },\n",
     "    \"why\": \"These tables feed service events. They look up the service type, employee, city, device, and power plan.\",\n",
     "}\n",
@@ -1039,7 +1039,7 @@
     "        \"dim_param\":               [\"tb_param\"],\n",
     "        \"dim_reading_mode\":        [\"tb_readingmode\"],\n",
     "        \"dim_power_plan\":          [\"tb_power_plan\", \"tb_device_power_plan\"],\n",
-    "        \"dim_weather_extremeness\": [\"tb_weather\"],  \n",
+    "        \"dim_weather_extremeness\": [\"tb_weather\"]  \n",
     "    },\n",
     "    \"why\": \"These OLTP tables determine the reading event grain and the lookups for device/city, parameter, reading mode, power plan, and weather-derived extremeness.\",\n",
     "}\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 42,
    "id": "f56ec606-d4ab-4d5a-a93e-5f0135a25c3c",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1063,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Wrote /Users/vasilysavin/Documents/buin/tuwien_bi/prov/prov_airq_dwh_080.jsonld\n",
+      "✓ Wrote /Users/philippmoessner/Desktop/tuwien_bi/prov/prov_airq_dwh_080.jsonld\n",
       "Preview (first ~24 lines):\n",
       "\n",
       "{\n",
@@ -1345,7 +1345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "dwh",
    "language": "python",
    "name": "python3"
   },
@@ -1359,7 +1359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
