--- a/DWH2_080/AirQ_Part2_080.ipynb
+++ b/DWH2_080/AirQ_Part2_080.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "07def75d-1bd4-4c44-a341-9e6e71742fea",
    "metadata": {},
    "outputs": [],
@@ -86,10 +86,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "93ae5428-70cc-4237-b3ff-c228686b3271",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Atoti 0.9.9!\n",
+      "\n",
+      "By using this community edition, you agree with the license available at https://docs.activeviam.com/products/atoti/python-sdk/latest/eula.html.\n",
+      "Browse the official documentation at https://docs.activeviam.com/products/atoti/python-sdk.\n",
+      "Join the community at https://www.atoti.io/register.\n",
+      "\n",
+      "Atoti collects telemetry data, which is used to help understand how to improve the product.\n",
+      "If you don't wish to send usage data, you can request a trial license at https://www.atoti.io/evaluation-license-request.\n",
+      "\n",
+      "You can hide this message by setting the `ATOTI_HIDE_EULA_MESSAGE` environment variable to True.\n"
+     ]
+    }
+   ],
    "source": [
     "import re, time\n",
     "import shutil, subprocess, os\n",
@@ -110,20 +127,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb6d15b5-6806-4dd0-bb36-5e3534585b34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: atoti\n",
+      "Version: 0.9.9\n",
+      "Summary: Explore metrics across hundreds of dimensions, analyze live data at its most granular level and perform what-if simulations at unparalleled speed\n",
+      "Home-page: https://www.atoti.io\n",
+      "Author: \n",
+      "Author-email: ActiveViam <dev@atoti.io>\n",
+      "License: \n",
+      "Location: /opt/miniconda3/envs/dwh/lib/python3.12/site-packages\n",
+      "Requires: atoti-client, atoti-server, jdk4py\n",
+      "Required-by: \n"
+     ]
+    }
+   ],
    "source": [
     "!pip show atoti"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "004841f2-fb79-4e7f-88f3-9eed76c28bef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/DWH2_080/csv\n",
+      "DDL dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/DWH2_080/ddl\n",
+      "ETL dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/DWH2_080/etl\n",
+      "MDX dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/DWH2_080/mdx\n",
+      "MDX_out dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/DWH2_080/mdx_out\n",
+      "SQL dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/DWH2_080/sql\n",
+      "SQLdump dir: /Users/philippmoessner/Desktop/Business Intelligence/tuwien_bi/DWH2_080/sqldump\n"
+     ]
+    }
+   ],
    "source": [
     "# === Toggles & paths ===\n",
     "root_dir = Path.cwd()\n",
@@ -164,10 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8816fcb6-7038-486e-ae99-2efc346eeccb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting via: postgresql+psycopg2://\\1:***@localhost:5432/airq\n",
+      "SET ROLE grp_080 ✓\n",
+      "current_user: grp_080\n"
+     ]
+    }
+   ],
    "source": [
     "# === Minimal config & connect ===\n",
     "DB_USER = f\"grp_{XXX}\"\n",
@@ -202,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a704b837-f6a0-4c73-b2a5-e3f069aa6df9",
    "metadata": {},
    "outputs": [],
@@ -292,10 +350,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6d04d190-0479-42fb-babe-9d782e26235d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== STAGING-ONLY RESET: stg2_080 ==\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"== STAGING-ONLY RESET: stg2_{XXX} ==\")\n",
     "try:\n",
@@ -316,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "855c8fcd-8591-40fb-b435-58d118e7e694",
    "metadata": {},
    "outputs": [],
@@ -377,10 +443,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a109ccca-903b-4980-87ff-5092004f0d74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 24 rows → stg2_080.tb_servicetype\n",
+      "Loaded 16 rows → stg2_080.tb_role\n",
+      "Loaded 484 rows → stg2_080.tb_employee\n",
+      "Loaded 20 rows → stg2_080.tb_country\n",
+      "Loaded 36 rows → stg2_080.tb_city\n",
+      "Loaded 8 rows → stg2_080.tb_readingmode\n",
+      "Loaded 4 rows → stg2_080.tb_alert\n",
+      "Loaded 30 rows → stg2_080.tb_param\n",
+      "Loaded 120 rows → stg2_080.tb_paramalert\n",
+      "Loaded 12 rows → stg2_080.tb_sensortype\n",
+      "Loaded 115 rows → stg2_080.tb_paramsensortype\n",
+      "Loaded 627 rows → stg2_080.tb_sensordevice\n",
+      "Loaded 26,316 rows → stg2_080.tb_weather\n",
+      "Loaded 22,720 rows → stg2_080.tb_serviceevent\n",
+      "Loaded 985,573 rows → stg2_080.tb_readingevent\n",
+      "⏱️ Total load time: 94.53 seconds · 1,036,105 rows\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading of original 15 CSV files in the correct order\n",
     "LOAD_ORDER_CSV = [\"tb_servicetype\",\"tb_role\",\"tb_employee\",\"tb_country\",\"tb_city\",\"tb_readingmode\",\n",
@@ -400,10 +489,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "56719c08-77d7-45c0-8a04-5b1fe82e988a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== DWH-ONLY RESET: dwh2_080 ==\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"== DWH-ONLY RESET: dwh2_{XXX} ==\")\n",
     "try:\n",
@@ -428,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "518eb416",
    "metadata": {},
    "outputs": [],
@@ -495,10 +592,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2c035ecf-7dee-4ab5-a5db-811fa8d4dd25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://localhost:63976'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.environ.pop(\"JAVA_HOME\", None)  # let Atoti use its own JDK via jdk4py\n",
     "\n",
@@ -511,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c1eccaf1-788f-4dce-9df9-1d90def43e95",
    "metadata": {},
    "outputs": [],
@@ -537,10 +645,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0fcd46d3-717b-4c56-961f-1126e424a691",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "Dimensions": {},
+       "Measures": {
+        "contributors.COUNT": {
+         "formatter": "INT[#,###]"
+        }
+       }
+      },
+      "text/html": [
+       "<ul>\n",
+       "<li>AirQ Cube\n",
+       "  <ul>\n",
+       "  <li>Dimensions\n",
+       "    <ul>\n",
+       "    </ul>\n",
+       "  </li>\n",
+       "  <li>Measures\n",
+       "    <ul>\n",
+       "    <li>contributors.COUNT\n",
+       "      <ul>\n",
+       "      <li>formatter: INT[#,###]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    </ul>\n",
+       "  </li>\n",
+       "  </ul>\n",
+       "</li>\n",
+       "</ul>\n"
+      ],
+      "text/plain": [
+       "<atoti.cube.Cube at 0x308ad1e80>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "AirQ Cube"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load star-schema tables to DataFrames\n",
     "df_time   = pd.read_sql(f\"SELECT * FROM dwh2_{XXX}.dim_timemonth\", engine)\n",
@@ -620,31 +773,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4429ac35-8624-46de-8e9d-9b09f4c80d7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: define hierarchies\n",
-    "# h[\"Time\"]  = [...]\n",
-    "# h[\"Geo\"]   = [...]\n",
-    "# h[\"Param\"] = [...]\n",
-    "# h[\"Alert\"] = [...]\n",
+    "h[\"Time\"] = [\n",
+    "    time_store[\"year_num\"],\n",
+    "    time_store[\"quarter_num\"],\n",
+    "    time_store[\"month_name\"],\n",
+    "]\n",
+    "h[\"Geo\"] = [\n",
+    "    city_store[\"region_name\"],\n",
+    "    city_store[\"country_name\"],\n",
+    "    city_store[\"city_name\"],\n",
+    "]\n",
+    "h[\"Param\"] = [\n",
+    "    param_store[\"purpose\"],\n",
+    "    param_store[\"category\"],\n",
+    "    param_store[\"param_name\"],\n",
+    "]\n",
+    "h[\"Alert\"] = [\n",
+    "    ap_store[\"alert_level_name\"],\n",
+    "]\n",
     "\n",
     "# TODO: define measures\n",
-    "# m[\"Reading Events\"]        =   ...      # fully additive\n",
-    "# m[\"Devices Reporting\"]     =   ...      # fully additive\n",
-    "# m[\"Data Volume (KB)\"]      =   ...      # fully additive\n",
-    "# m[\"Missing Days\"]          =   ...      # fully additive\n",
-    "# m[\"Exceed Days (any)\"]     =   ...      # fully additive\n",
-    "# m[\"Avg Recorded Value\"]    =   ...      # semi-additive\n",
-    "# m[\"P95 Recorded Value\"]    =   ...      # semi-additive\n",
-    "# m[\"Avg Data Quality\"]      =   ...      # semi-additive\n"
+    "m[\"Reading Events\"] = tt.agg.sum(fact_store[\"reading_events_count\"])        # fully additive\n",
+    "m[\"Devices Reporting\"] = tt.agg.sum(fact_store[\"devices_reporting_count\"])  # fully additive\n",
+    "m[\"Data Volume (KB)\"] = tt.agg.sum(fact_store[\"data_volume_kb_sum\"])        # fully additive\n",
+    "m[\"Missing Days\"] = tt.agg.sum(fact_store[\"missing_days\"])                  # fully additive\n",
+    "m[\"Exceed Days (any)\"] = tt.agg.sum(fact_store[\"exceed_days_any\"])          # fully additive\n",
+    "m[\"Avg Recorded Value\"] = tt.agg.mean(fact_store[\"recordedvalue_avg\"])      # semi-additive\n",
+    "m[\"P95 Recorded Value\"] = tt.agg.mean(fact_store[\"recordedvalue_p95\"])      # semi-additive\n",
+    "m[\"Avg Data Quality\"] = tt.agg.mean(fact_store[\"data_quality_avg\"])         # semi-additive\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3404b2db-3869-4fb6-8255-1099bf3919ce",
    "metadata": {},
    "outputs": [],
@@ -657,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "75861cbf-206f-4b40-88da-51818ea0dee0",
    "metadata": {},
    "outputs": [],
@@ -669,20 +836,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "705f05c8-417c-4884-b04b-7b3e585de57e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "Dimensions": {
+        "dim_alertpeak": {
+         "Alert": [
+          "alert_level_name"
+         ]
+        },
+        "dim_city": {
+         "Geo": [
+          "region_name",
+          "country_name",
+          "city_name"
+         ]
+        },
+        "dim_param": {
+         "Param": [
+          "purpose",
+          "category",
+          "param_name"
+         ]
+        },
+        "dim_timemonth": {
+         "Time": [
+          "year_num",
+          "quarter_num",
+          "month_name"
+         ]
+        }
+       },
+       "Measures": {
+        "Avg Data Quality": {
+         "formatter": "DOUBLE[#,###.00]"
+        },
+        "Avg Recorded Value": {
+         "formatter": "DOUBLE[#,###.00]"
+        },
+        "Data Volume (KB)": {
+         "formatter": "INT[#,###]"
+        },
+        "Devices Reporting": {
+         "formatter": "INT[#,###]"
+        },
+        "Exceed Days (any)": {
+         "formatter": "INT[#,###]"
+        },
+        "Missing Days": {
+         "formatter": "INT[#,###]"
+        },
+        "P95 Recorded Value": {
+         "formatter": "DOUBLE[#,###.00]"
+        },
+        "Reading Events": {
+         "formatter": "INT[#,###]"
+        },
+        "contributors.COUNT": {
+         "formatter": "INT[#,###]"
+        }
+       }
+      },
+      "text/html": [
+       "<ul>\n",
+       "<li>AirQ Cube\n",
+       "  <ul>\n",
+       "  <li>Dimensions\n",
+       "    <ul>\n",
+       "    <li>dim_alertpeak\n",
+       "      <ul>\n",
+       "      <li>Alert\n",
+       "        <ol>\n",
+       "        <li>alert_level_name</li>\n",
+       "        </ol>      </li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>dim_city\n",
+       "      <ul>\n",
+       "      <li>Geo\n",
+       "        <ol>\n",
+       "        <li>region_name</li>\n",
+       "        <li>country_name</li>\n",
+       "        <li>city_name</li>\n",
+       "        </ol>      </li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>dim_param\n",
+       "      <ul>\n",
+       "      <li>Param\n",
+       "        <ol>\n",
+       "        <li>purpose</li>\n",
+       "        <li>category</li>\n",
+       "        <li>param_name</li>\n",
+       "        </ol>      </li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>dim_timemonth\n",
+       "      <ul>\n",
+       "      <li>Time\n",
+       "        <ol>\n",
+       "        <li>year_num</li>\n",
+       "        <li>quarter_num</li>\n",
+       "        <li>month_name</li>\n",
+       "        </ol>      </li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    </ul>\n",
+       "  </li>\n",
+       "  <li>Measures\n",
+       "    <ul>\n",
+       "    <li>Avg Data Quality\n",
+       "      <ul>\n",
+       "      <li>formatter: DOUBLE[#,###.00]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>Avg Recorded Value\n",
+       "      <ul>\n",
+       "      <li>formatter: DOUBLE[#,###.00]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>Data Volume (KB)\n",
+       "      <ul>\n",
+       "      <li>formatter: INT[#,###]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>Devices Reporting\n",
+       "      <ul>\n",
+       "      <li>formatter: INT[#,###]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>Exceed Days (any)\n",
+       "      <ul>\n",
+       "      <li>formatter: INT[#,###]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>Missing Days\n",
+       "      <ul>\n",
+       "      <li>formatter: INT[#,###]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>P95 Recorded Value\n",
+       "      <ul>\n",
+       "      <li>formatter: DOUBLE[#,###.00]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>Reading Events\n",
+       "      <ul>\n",
+       "      <li>formatter: INT[#,###]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    <li>contributors.COUNT\n",
+       "      <ul>\n",
+       "      <li>formatter: INT[#,###]</li>\n",
+       "      </ul>\n",
+       "    </li>\n",
+       "    </ul>\n",
+       "  </li>\n",
+       "  </ul>\n",
+       "</li>\n",
+       "</ul>\n"
+      ],
+      "text/plain": [
+       "<atoti.cube.Cube at 0x308ad1e80>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "AirQ Cube"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cube"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3b656716-9e3e-44d5-9fe5-71db898afff4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hierarchies and their levels:\n",
+      " - ('dim_timemonth', 'Time') → levels: ['year_num', 'quarter_num', 'month_name']\n",
+      " - ('dim_param', 'Param') → levels: ['purpose', 'category', 'param_name']\n",
+      " - ('dim_alertpeak', 'Alert') → levels: ['alert_level_name']\n",
+      " - ('dim_city', 'Geo') → levels: ['region_name', 'country_name', 'city_name']\n",
+      "\\Measures:\n",
+      "  - Avg Data Quality\n",
+      "  - P95 Recorded Value\n",
+      "  - Devices Reporting\n",
+      "  - Avg Recorded Value\n",
+      "  - contributors.COUNT\n",
+      "  - Exceed Days (any)\n",
+      "  - Reading Events\n",
+      "  - Data Volume (KB)\n",
+      "  - update.TIMESTAMP\n",
+      "  - Missing Days\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:6: SyntaxWarning: invalid escape sequence '\\M'\n",
+      "<>:6: SyntaxWarning: invalid escape sequence '\\M'\n",
+      "/var/folders/3_/4191z6q51251z9ggjkycrb5m0000gn/T/ipykernel_21469/4001172213.py:6: SyntaxWarning: invalid escape sequence '\\M'\n",
+      "  print(\"\\Measures:\")\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nHierarchies and their levels:\")\n",
     "for h_name, hierarchy in cube.hierarchies.items():\n",
@@ -1002,9 +1377,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dwh)",
+   "display_name": "dwh",
    "language": "python",
-   "name": "dwh"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1016,7 +1391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
