Atoti PDF answers Philipp

--- a/DWH2_080/AirQ_Part2_080.ipynb
+++ b/DWH2_080/AirQ_Part2_080.ipynb
@@ -1432,17 +1432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "id": "2c035ecf-7dee-4ab5-a5db-811fa8d4dd25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://localhost:51011'"
+       "'http://localhost:53399'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "id": "c1eccaf1-788f-4dce-9df9-1d90def43e95",
    "metadata": {},
    "outputs": [],
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 84,
    "id": "0fcd46d3-717b-4c56-961f-1126e424a691",
    "metadata": {},
    "outputs": [
@@ -1521,10 +1521,10 @@
        "</ul>\n"
       ],
       "text/plain": [
-       "<atoti.cube.Cube at 0x16a2ae4e0>"
+       "<atoti.cube.Cube at 0x121658a70>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 84,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "id": "4429ac35-8624-46de-8e9d-9b09f4c80d7c",
    "metadata": {},
    "outputs": [],
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "id": "3404b2db-3869-4fb6-8255-1099bf3919ce",
    "metadata": {},
    "outputs": [],
@@ -1664,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 87,
    "id": "75861cbf-206f-4b40-88da-51818ea0dee0",
    "metadata": {},
    "outputs": [],
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 88,
    "id": "705f05c8-417c-4884-b04b-7b3e585de57e",
    "metadata": {},
    "outputs": [
@@ -1841,10 +1841,10 @@
        "</ul>\n"
       ],
       "text/plain": [
-       "<atoti.cube.Cube at 0x16a2ae4e0>"
+       "<atoti.cube.Cube at 0x121658a70>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 88,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 89,
    "id": "3b656716-9e3e-44d5-9fe5-71db898afff4",
    "metadata": {},
    "outputs": [
