--- a/Assignment3/notebook.ipynb
+++ b/Assignment3/notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2329db9b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d5122654",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7c723a04",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "41a02423",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "16721334",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "eb927186",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4195fdc0",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "68e6f5c9",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7f08ce56",
    "metadata": {},
    "outputs": [],
@@ -5300,7 +5300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "f187a1fc",
    "metadata": {},
    "outputs": [],
@@ -6149,6 +6149,93 @@
     "    f':deployment_recommendation_b rdfs:comment \"{_escape_literal(deploy_comment_b)}\" .',\n",
     "]\n",
     "engine.insert(deployment_objective_b, prefixes=prefixes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c639c2c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#############################################\n",
+    "# Repository & Licensing documentation\n",
+    "#############################################\n",
+    "\n",
+    "REPO_URL = \"https://github.com/philippmoessner/tuwien_bi/tree/61ca8a01e38432e69c51b952ad015ac8ccf0ce3c/Assignment3\"\n",
+    "PROJECT_LABEL = \"Inside Airbnb Vienna Analysis - Group 080\"\n",
+    "\n",
+    "deploy_code_writer = student_a\n",
+    "\n",
+    "lic_ass_uuid_writer   = \"05c03f80-bde0-40ef-84dd-861f9fd56d1e\"\n",
+    "lic_ass_uuid_executor = \"94e9900d-051d-4fb9-897e-4624f80b0249\"\n",
+    "\n",
+    "start_time_license = now()\n",
+    "end_time_license   = now()\n",
+    "\n",
+    "license_comment = f\"\"\"\n",
+    "Repository & licensing decision (Deployment / governance).\n",
+    "We publish the project artifacts in a Git repository and document licensing as follows:\n",
+    "\n",
+    "- Code & notebooks: MIT License (permissive software license).\n",
+    "- Textual artifacts (report text), tables, figures/plots: Creative Commons Attribution 4.0 (CC-BY 4.0).\n",
+    "\n",
+    "Repository URL (PID/URI): {REPO_URL}\n",
+    "\n",
+    "Note: This licensing applies only to artifacts created by the project team (code, notebooks, figures, report text).\n",
+    "The underlying InsideAirbnb dataset has its own terms and is not relicensed by this project.\n",
+    "\"\"\"\n",
+    "\n",
+    "license_activity = [\n",
+    "    f':document_repository_and_licenses rdf:type prov:Activity .',\n",
+    "    f':document_repository_and_licenses sc:isPartOf :deployment_phase .',\n",
+    "    f':document_repository_and_licenses rdfs:label \"Repository and license documentation\" .',\n",
+    "    f':document_repository_and_licenses rdfs:comment \"{_escape_literal(license_comment)}\" .',\n",
+    "    f':document_repository_and_licenses prov:startedAtTime \"{start_time_license}\"^^xsd:dateTime .',\n",
+    "    f':document_repository_and_licenses prov:endedAtTime \"{end_time_license}\"^^xsd:dateTime .',\n",
+    "\n",
+    "    f':document_repository_and_licenses prov:qualifiedAssociation :{lic_ass_uuid_writer} .',\n",
+    "    f':{lic_ass_uuid_writer} prov:agent :{deploy_code_writer} .',\n",
+    "    f':{lic_ass_uuid_writer} rdf:type prov:Association .',\n",
+    "    f':{lic_ass_uuid_writer} prov:hadRole :{code_writer_role} .',\n",
+    "\n",
+    "    f':document_repository_and_licenses prov:qualifiedAssociation :{lic_ass_uuid_executor} .',\n",
+    "    f':{lic_ass_uuid_executor} prov:agent :{executed_by} .',\n",
+    "    f':{lic_ass_uuid_executor} rdf:type prov:Association .',\n",
+    "    f':{lic_ass_uuid_executor} prov:hadRole :{code_executor_role} .',\n",
+    "\n",
+    "    f':document_repository_and_licenses prov:used :bu_ai_risk_aspects .',\n",
+    "    f':document_repository_and_licenses prov:used :bu_business_objectives .',\n",
+    "]\n",
+    "\n",
+    "engine.insert(license_activity, prefixes=prefixes)\n",
+    "\n",
+    "repo_and_license_entities = [\n",
+    "    f':project_repository rdf:type prov:Entity .',\n",
+    "    f':project_repository rdfs:label \"Project Git repository\" .',\n",
+    "    f':project_repository rdfs:comment \"{_escape_literal(PROJECT_LABEL)}\" .',\n",
+    "    f':project_repository prov:atLocation <{REPO_URL}> .',\n",
+    "    f':project_repository prov:wasGeneratedBy :document_repository_and_licenses .',\n",
+    "\n",
+    "    f':license_mit rdf:type prov:Entity .',\n",
+    "    f':license_mit rdfs:label \"MIT License\" .',\n",
+    "    f':license_mit prov:atLocation <https://opensource.org/licenses/MIT> .',\n",
+    "    f':license_mit prov:wasGeneratedBy :document_repository_and_licenses .',\n",
+    "\n",
+    "    f':license_cc_by_40 rdf:type prov:Entity .',\n",
+    "    f':license_cc_by_40 rdfs:label \"Creative Commons Attribution 4.0 International (CC-BY 4.0)\" .',\n",
+    "    f':license_cc_by_40 prov:atLocation <https://creativecommons.org/licenses/by/4.0/> .',\n",
+    "    f':license_cc_by_40 prov:wasGeneratedBy :document_repository_and_licenses .',\n",
+    "\n",
+    "    f':project_repository prov:used :license_mit .',\n",
+    "    f':project_repository prov:used :license_cc_by_40 .',\n",
+    "\n",
+    "    f':document_repository_and_licenses prov:used :project_repository .',\n",
+    "    f':document_repository_and_licenses prov:used :license_mit .',\n",
+    "    f':document_repository_and_licenses prov:used :license_cc_by_40 .',\n",
+    "]\n",
+    "\n",
+    "engine.insert(repo_and_license_entities, prefixes=prefixes)\n"
    ]
   },
   {
